[gd_scene load_steps=7 format=3 uid="uid://cvllj1m1jnq38"]

[ext_resource type="Script" path="res://actor.gd" id="1_0gbcd"]
[ext_resource type="Script" path="res://mover.gd" id="2_agquf"]
[ext_resource type="Script" path="res://ghoul_abilities.gd" id="3_pls1d"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_x6gh2"]
radius = 22.0
height = 60.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2xdc1"]
size = Vector2(38, 83)

[sub_resource type="CircleShape2D" id="CircleShape2D_7miq8"]
radius = 64.0488

[node name="Ghoul" type="CharacterBody2D"]
y_sort_enabled = true
script = ExtResource("1_0gbcd")
hp = 50
hp_max = 50
mp = 75
mp_max = 75

[node name="Mover" type="Node" parent="."]
script = ExtResource("2_agquf")

[node name="Abilities" type="Node" parent="."]
script = ExtResource("3_pls1d")

[node name="EnemyIndicator" type="ColorRect" parent="."]
offset_left = -18.0
offset_top = -72.0
offset_right = 18.0
offset_bottom = 2.0
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="FriendlyIndicator" type="ColorRect" parent="."]
offset_left = -18.0
offset_top = -72.0
offset_right = 18.0
offset_bottom = 2.0
mouse_filter = 2
color = Color(0, 1, 0, 1)

[node name="SelectIndicator" type="ColorRect" parent="."]
offset_left = -19.0
offset_top = 4.0
offset_right = 21.0
offset_bottom = 8.0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="Sprite" type="ColorRect" parent="."]
y_sort_enabled = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -70.0
offset_right = 16.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(16, 70)
size_flags_vertical = 8
mouse_filter = 2
color = Color(0.490196, 0.372549, 0.729412, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -17)
shape = SubResource("CapsuleShape2D_x6gh2")

[node name="ClickListener" type="Area2D" parent="."]
position = Vector2(-16, -70)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickListener"]
position = Vector2(16, 39.5)
shape = SubResource("RectangleShape2D_2xdc1")

[node name="TargetArea" type="Area2D" parent="."]
position = Vector2(-16, -70)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetArea"]
position = Vector2(16, 39.5)
shape = SubResource("CircleShape2D_7miq8")

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(-16, -70)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(16, 39.5)
shape = SubResource("CircleShape2D_7miq8")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[connection signal="input_event" from="ClickListener" to="." method="_on_area_2d_input_event"]
